- fixed unaligned 'badge' in sidebar

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -14,8 +14,6 @@
     .badge {
         position: absolute;
         right: 35%;
-        top: 30%;
-        position: absolute;
     }
     .badge-warning {
         background-color: $warning-red;
